--- a/firework/styles/style.css
+++ b/firework/styles/style.css
@@ -86,12 +86,12 @@ main > div:nth-of-type(2) {
 /* create the flare*/
 label {
   position: absolute;
-  bottom: 20%;
+  bottom: 10%;
   content: "";
   display: block;
   margin: 0 auto;
-  height: 5em;
-  width: 1em;
+  height: 3em;
+  width: 0.8em;
   left: 50%;
   background-image: linear-gradient(
     150deg,
@@ -104,33 +104,47 @@ label {
 label::before {
   content: "";
   position: absolute;
-  top: -3.5em;
-  left: -1.4em;
-  border-top: 2em solid transparent;
-  border-right: 2em solid transparent;
-  border-bottom: 2em solid #ff2727;
-  border-left: 2em solid transparent;
+  top: -2.2em;
+  left: -0.78em;
+  border-top: 1.2em solid transparent;
+  border-right: 1.2em solid transparent;
+  border-bottom: 1.2em solid #ff2727;
+  border-left: 1.2em solid transparent;
 }
 
 label::after {
   content: "";
   position: absolute;
   left: calc(50% - 0.15em);
-  width: 0.3em;
+  width: 0.23em;
   height: 2em;
   background-color: #554842;
   bottom: -2em;
   border-bottom-right-radius: 60%;
   border-bottom-left-radius: 60%;
 }
-ul {
-  display: none;
+
+ul:first-of-type {
+  overflow: hidden; /* Hide the element content, while height = 0 */
+  height: 0;
+  opacity: 0;
+  transition: height 0ms 400ms, opacity 400ms 0ms;
 }
-input:checked ~ ul {
-  display: block;
+
+#fl:checked ~ ul {
+  height: auto;
+  opacity: 1;
+  transition: height 0ms 0ms, opacity 600ms 0ms;
+  height: auto;
+  opacity: 1;
+  transition: height 0ms 0ms, opacity 600ms 0ms;
   position: absolute;
   top: 50%;
   left: 50%;
+
+  animation-name: firework;
+  animation-duration: 2s;
+  transition-delay: 2s;
 }
 
 input:checked ~ main > div:first-of-type {
@@ -155,6 +169,31 @@ input:checked ~ main > div:first-of-type {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+input:checked ~ label {
+  animation-name: flareHigh;
+  animation-duration: 1s;
+  /* animation-iteration-count: infinite; */
+}
+/* flare animation */
+@keyframes flareHigh {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20rem);
+  }
+}
+
+/* firework animation */
+@keyframes firework {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-30rem);
+  }
+}
+
 /* waves */
 /* div:nth-of-type(2),
 div:nth-of-type(2)::before,
