--- a/firework/styles/style.css
+++ b/firework/styles/style.css
@@ -9,8 +9,7 @@
 /*********************/
 /* CUSTOM PROPERTIES */
 /*********************/
-:root {
-}
+:root {}
 
 /***************************/
 /* GENERAL styles ELEMENTS */
@@ -28,7 +27,9 @@ input {
   white-space: nowrap;
   width: 1px;
 }
-
+body{
+  overflow: hidden;
+}
 body,
 ul,
 div,
@@ -38,23 +39,22 @@ label {
   /* overflow: hidden; */
 }
 
-main > div:first-of-type {
-  background-image: linear-gradient(
-    to bottom,
-    #93e7f0,
-    #79ddf2,
-    #60d2f5,
-    #4ac6f7,
-    #3db9f9,
-    #3db9f9,
-    #3db9f9,
-    #3db9f9,
-    #4ac6f7,
-    #ffffff,
-    #fae192,
-    #f2d2a9,
-    #f6d7b0
-  );
+/*background decor beach*/
+main>div:first-of-type {
+  background-image: linear-gradient(to bottom,
+      #93e7f0,
+      #79ddf2,
+      #60d2f5,
+      #4ac6f7,
+      #3db9f9,
+      #3db9f9,
+      #3db9f9,
+      #3db9f9,
+      #4ac6f7,
+      #f8e9b6,
+      #fae192,
+      #f2d2a9,
+      #f6d7b0);
 
   height: 100vh;
   margin: 0;
@@ -62,14 +62,23 @@ main > div:first-of-type {
   background-attachment: fixed;
 }
 
-main > div:nth-of-type(2) {
-  background: radial-gradient(
-    ellipse at center,
-    #ffd000 1%,
-    #f9b700 39%,
-    #f9b700 39%,
-    #e06317 100%
-  );
+/* change background decor, darkmode*/ 
+body:has(:checked) div:first-of-type {
+  background-image: linear-gradient(to bottom, #1d1d50, #1a1e53, #171f56, #132059, #0d215c, #042f68, #003d72, #054b7b, #316989, #5c8597, #89a1a6, #b9bcbc);
+  height: 100vh;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+ 
+}
+
+/*create the sun*/
+main>div:nth-of-type(2) {
+  background: radial-gradient(ellipse at center,
+      #ffd000 1%,
+      #f9b700 39%,
+      #f9b700 39%,
+      #e06317 100%);
   height: 4em;
   width: 4em;
   border: 0 !important;
@@ -83,6 +92,24 @@ main > div:nth-of-type(2) {
   border-radius: 50%;
 }
 
+body:has(:checked) div:nth-of-type(2) {
+display:none;
+}
+
+/*moon*/
+body:has(:checked) div:nth-of-type(3) {
+  margin:auto;
+  background-color:transparent;
+  height:7em;
+  width:7em;
+  border-radius:50%;
+  
+  box-shadow: 1em 0.3em 0em rgb(240, 184, 43);
+  position: absolute;
+  top: 3em;
+  left: 80%;
+  
+}
 /* create the flare*/
 label {
   position: absolute;
@@ -93,12 +120,10 @@ label {
   height: 3em;
   width: 0.8em;
   left: 50%;
-  background-image: linear-gradient(
-    150deg,
-    #ff2727 40%,
-    #fff 40% 66%,
-    #ff2727 40%
-  );
+  background-image: linear-gradient(150deg,
+      #ff2727 40%,
+      #fff 40% 66%,
+      #ff2727 40%);
 }
 
 label::before {
@@ -125,13 +150,14 @@ label::after {
 }
 
 ul:first-of-type {
-  overflow: hidden; /* Hide the element content, while height = 0 */
+  overflow: hidden;
+  /* Hide the element content, while height = 0 */
   height: 0;
   opacity: 0;
   transition: height 0ms 400ms, opacity 400ms 0ms;
 }
 
-#fl:checked ~ ul {
+body:has(:checked) ul {
   height: auto;
   opacity: 1;
   transition: height 0ms 0ms, opacity 600ms 0ms;
@@ -147,38 +173,58 @@ ul:first-of-type {
   transition-delay: 2s;
 }
 
-input:checked ~ main > div:first-of-type {
-  background-image: linear-gradient(
-    to bottom,
-    #0e0e0f,
-    #000000,
-    #0eaa71,
-    #4ac6f7,
-    #3db9f9,
-    #3db9f9,
-    #3db9f9,
-    #3db9f9,
-    #4ac6f7,
-    #ffffff,
-    #fae192,
-    #f2d2a9,
-    #f6d7b0
-  );
-  height: 100vh;
-  margin: 0;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-input:checked ~ label {
+body:has(:checked) label {
   animation-name: flareHigh;
   animation-duration: 1s;
   /* animation-iteration-count: infinite; */
+}
+
+body:has(:checked) div:nth-of-type(4) {
+	animation-play-state:running;
+} 
+div:nth-of-type(4), div:nth-of-type(4)::before, div:nth-of-type(4)::after{
+  --top: 60vh;
+  content: "";
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0.5vmin;
+  aspect-ratio: 1;
+  background:
+    /* random backgrounds */
+    radial-gradient(circle, #ff0 0.2vmin, #0000 0) 50% 00%,
+    radial-gradient(circle, red 0.3vmin, #0000 0) 00% 50%,
+    radial-gradient(circle, #ff0 0.5vmin, #0000 0) 50% 99%,
+    radial-gradient(circle, red 0.2vmin, #0000 0) 99% 50%,
+    radial-gradient(circle, #ff0 0.3vmin, #0000 0) 80% 90%,
+    radial-gradient(circle, red 0.5vmin, #0000 0) 95% 90%,
+    radial-gradient(circle, #ff0 0.5vmin, #0000 0) 10% 60%,
+    radial-gradient(circle, red 0.2vmin, #0000 0) 31% 80%,
+    radial-gradient(circle, #ff0 0.3vmin, #0000 0) 80% 10%,
+    radial-gradient(circle, red 0.2vmin, #0000 0) 90% 23%,
+    radial-gradient(circle, #ff0 0.3vmin, #0000 0) 45% 20%,
+    radial-gradient(circle, #ff0 0.5vmin, #0000 0) 13% 24%
+    ;
+  background-size: 0.5vmin 0.5vmin;
+  background-repeat: no-repeat;
+  animation: fireworkYellowRed 3s infinite;
+   animation-play-state: paused;
+}
+
+div:nth-of-type(3)::before {
+  transform: translate(-50%, -50%) rotate(25deg) !important; 
+}
+
+div:nth-of-type(3)::after {
+  transform: translate(-50%, -50%) rotate(-37deg) !important;
 }
 /* flare animation */
 @keyframes flareHigh {
   0% {
     transform: translateY(0);
   }
+
   100% {
     transform: translateY(-20rem);
   }
@@ -189,10 +235,28 @@ input:checked ~ label {
   0% {
     transform: translateY(0);
   }
+
   100% {
     transform: translateY(-30rem);
   }
 }
+
+@keyframes fireworkYellowRed {
+  0% { 
+    transform: translate(-50%, 80vh);
+    width: 0.5vmin;
+    opacity: 1;
+  }
+  50% { 
+    width: 0.5vmin;
+    opacity: 1;
+  }
+  100% { 
+    width: 45vmin; 
+    opacity: 0; 
+  }
+}
+
 
 /* waves */
 /* div:nth-of-type(2),
