--- a/fireworkV2/styles/style.css
+++ b/fireworkV2/styles/style.css
@@ -187,6 +187,30 @@ body:has(#startAnimation:checked) main > div:nth-of-type(2)::after {
   z-index: 3;
 }
 
+/* Rock */
+svg {
+  position: absolute;
+  z-index: 3;
+  top: 60%;
+  left: 25%;
+  width: 30rem;
+  translate: ();
+  transform: translate(-60%, -50%);
+}
+
+svg > path:first-of-type {
+  fill: #3a3232;
+}
+svg > path:nth-of-type(2) {
+  fill: #584b4c;
+}
+svg > path:nth-of-type(3) {
+  fill: #665356;
+}
+svg > path:nth-of-type(4) {
+  fill: #4d4040;
+}
+
 /* Form with flare item */
 main > form:nth-of-type(2) {
   /* position: relative;
@@ -400,6 +424,70 @@ body:has(#startCylinder:checked) main > ul:nth-of-type(2) > li::after {
   background-color: pink;
   animation: cylinderFirework 2.5s ease-in-out infinite;
   animation-delay: 3.2s;
+}
+
+/*--- Cube ---*/
+main > ul:nth-of-type(3) {
+  transform-style: preserve-3d;
+  transform: scale(0.3) rotateY(185deg) rotateX(110deg) rotateZ(315deg);
+  position: absolute;
+  width: 12.5em;
+  height: 12.5em;
+  top: 70%;
+  left: 60%;
+}
+
+main > ul:nth-of-type(3) > li {
+  width: 100%;
+  height: 100%;
+  background-color: #554531;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Cube circles */
+main > ul:nth-of-type(3) > li:nth-of-type(1)::before {
+  content: "";
+  width: 20%;
+  height: 20%;
+  background-color: #b54c45;
+  border-radius: 50%;
+  box-shadow: #b54c45 -3.125rem -3.125rem 0 0, #ff8a81 -3.125rem 0 0 0,
+    #b54c45 -3.125rem 3.125rem 0 0, #ff8a81 -0rem 3.125rem 0 0,
+    #b54c45 3.125rem -3.125rem 0 0, #ff8a81 3.125rem 0 0 0,
+    #b54c45 3.125rem 3.125rem 0 0, #ff8a81 0 -3.125rem 0 0;
+}
+
+/*cube sides*/
+main > ul:nth-of-type(3) > li:nth-of-type(1) {
+  transform: translateZ(6.25rem);
+  background-color: #c37272;
+}
+
+main > ul:nth-of-type(3) > li:nth-of-type(2) {
+  transform: translateX(-6.25rem) rotateY(-90deg);
+}
+
+main > ul:nth-of-type(3) > li:nth-of-type(3) {
+  transform: translateY(6.25rem) rotateX(90deg);
+}
+
+main > ul:nth-of-type(3) > li:nth-of-type(4) {
+  transform: translateY(-6.25rem) rotateX(90deg);
+  background: #a7cfdf;
+  background: linear-gradient(to right, #554531 0%, #ba8f57 100%);
+}
+
+main > ul:nth-of-type(3) > li:nth-of-type(5) {
+  transform: translateX(6.25rem) rotateY(90deg);
+  background: #a7cfdf;
+  background: linear-gradient(to top, #554531 0%, #ba8f57 100%);
+}
+
+main > ul:nth-of-type(3) > li:nth-of-type(6) {
+  transform: translateZ(-6.25rem);
 }
 
 /*--- Flare path animation ---*/
